Fix mobile overlap

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 
 .projects{
      /* Sizing */
-    height: 100vh;
+    min-height: 100vh;
     padding-top:2vh;
 }
 
